// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-rating #render should render component as expected (1) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" role="spinbutton" tabindex="0">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (2) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" role="spinbutton" tabindex="0" value="0">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (3) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="0.5" role="spinbutton" tabindex="0" value="0.5">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-partial"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (4) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="1" role="spinbutton" tabindex="0" value="1">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (5) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="1.5" role="spinbutton" tabindex="0" value="1.5">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-partial"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (6) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" role="spinbutton" tabindex="0" value="2">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (7) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="2.5" role="spinbutton" tabindex="0" value="2.5">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-partial"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (8) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" role="spinbutton" tabindex="0" value="3">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (9) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="3.5" role="spinbutton" tabindex="0" value="3.5">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-partial"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (10) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="4" role="spinbutton" tabindex="0" value="4">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (11) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="4.5" role="spinbutton" tabindex="0" value="4.5">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-partial"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (12) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="spinbutton" tabindex="0" value="5">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (13) 1`] = `
<gux-rating aria-valuemax="10" aria-valuemin="0" aria-valuenow="0" max-value="10" role="spinbutton" tabindex="0" value="0">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (14) 1`] = `
<gux-rating aria-valuemax="10" aria-valuemin="0" aria-valuenow="5" max-value="10" role="spinbutton" tabindex="0" value="5">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (15) 1`] = `
<gux-rating aria-valuemax="10" aria-valuemin="0" aria-valuenow="10" max-value="10" role="spinbutton" tabindex="0" value="10">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (16) 1`] = `
<gux-rating aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" disabled="" role="spinbutton" tabindex="-1" value="3">
  <mock:shadow-root>
    <div class="gux-disabled gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (17) 1`] = `
<gux-rating aria-readonly="" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" readonly="" role="spinbutton" tabindex="0" value="3">
  <mock:shadow-root>
    <div class="gux-rating-start-container">
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating-active"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
      <gux-icon decorative="" icon-name="rating"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-rating>
`;
